changes to look and feel of certain pages, more standardization of Full House, added add icon to dashboard, fixed layout bug

--- a/fullhouse/static/create_house.css
+++ b/fullhouse/static/create_house.css
@@ -1,3 +1,9 @@
 #createhouse {
+  display: inline-block;
   padding: 20px;
+  text-align: right;
+}
+
+#createhouse input[type="text"] {
+  width: 150px;
 }
