--- a/fullhouse/static/dashboard.css
+++ b/fullhouse/static/dashboard.css
@@ -7,7 +7,7 @@
   border-radius: 5px;
   display: inline-block;
   height: 320px;
-  padding: 10px;
+  padding: 1%;
   width: 47%;
 }
 
@@ -33,6 +33,15 @@
 .announcement .createdby {
   font-size: smaller;
   font-style: italic;
+}
+
+#add-icon {
+  width: 15px;
+  height: 15px;
+}
+
+#add-ann {
+  float: right;
 }
 
 #tasks {
